# spfgui

./: .gitmodules  .travis.yml  CMakeLists.txt  Graph.qml  Help.qml  README.md  Vertex.qml  main.cpp  main.qml  qml.qrc
.github/workflows/: blank.yml
graph/: Edge.qml  GraphModel.qml  GraphView.qml  Vertex.qml  Weight.qml  WeightEditor.qml  client.cpp  client.h  edgemodel.cpp  edgemodel.h  graphmodel.cpp  graphmodel.h  vertexmodel.cpp  vertexmodel.h
qmltests/: CMakeLists.txt  FakeModel.qml  FakeWeight.qml  StubModel.qml  qml.qrc  tst_edge.qml  tst_graph.qml  tst_vertex.qml  tst_weight.qml
